--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -322,3 +322,47 @@ a {
   font-size:.8rem;
   color:#fff;
 }
+
+.drop-info {
+  position:fixed;
+  top:0;
+  left:0;
+  z-index:9999;
+  width:100%;
+  height:100%;
+  background:rgba($color-primary, .9);
+  border:4px solid $color-accent;
+  color:$color-accent;
+  font-size:60px;
+  font-weight:bold;
+  line-height:1.4;
+  text-align:center;
+  transition:all $transition-duration $transition-easing;
+  visibility:hidden;
+  opacity:0;
+
+  body.is-enter & {
+    visibility:visible;
+    opacity:1;
+  }
+
+  @include e(body) {
+    position:absolute;
+    top:0;
+    right:0;
+    bottom:0;
+    left:0;
+    height:150px;
+    margin:auto;
+  }
+
+  @include e(title) {
+    margin:0;
+  }
+
+  @include e(text) {
+    margin:0;
+    color:#fff;
+    font-size:14px;
+  }
+}
