--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -21,7 +21,8 @@ html
     meta(name="twitter:image:src", content=ogImage)
 
     meta(name="format-detection", content="telephone=no")
-    meta(name="viewport", content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no")
+    //- meta(name="viewport", content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no")
+    meta(name="viewport", content="width=960")
     title= title
     link(rel="shortcut icon", href="./images/favicon.ico")
     link(rel="stylesheet", href="./css/style.css")
@@ -36,22 +37,22 @@ html
             h2.brand__text Indent text to Tree text.
           ul.shares
             li.shares__item--twitter
-              a.shares__link(data-share="twitter", href="http://twitter.com/intent/tweet?text=" + title + "&url=" + url, onclick="window.open(encodeURI(decodeURI(this.href)), 'tweetwindow', 'width=550, height=450, personalbar=0, toolbar=0, scrollbars=1, resizable=1' ); return false;", target="_blank")
+              a.shares__link(href="http://twitter.com/intent/tweet?text=" + title + "&url=" + url, onclick="window.open(encodeURI(decodeURI(this.href)), 'tweetwindow', 'width=550, height=450, personalbar=0, toolbar=0, scrollbars=1, resizable=1' ); return false;", target="_blank")
                 i.fa.fa-twitter
               div.shares__popup Tweet!
 
             li.shares__item--facebook
-              a.shares__link(data-share="facebook", href="http://www.facebook.com/share.php?u=" + url, onclick="window.open(this.href, 'facebookwindow', 'width=550, height=450,personalbar=0,toolbar=0,scrollbars=1,resizable=1'); return false;")
+              a.shares__link(href="http://www.facebook.com/share.php?u=" + url, onclick="window.open(this.href, 'facebookwindow', 'width=550, height=450,personalbar=0,toolbar=0,scrollbars=1,resizable=1'); return false;")
                 i.fa.fa-facebook
               div.shares__popup Share!
 
             li.shares__item--hatena
-              a.shares__link(data-share="hatena", href="http://b.hatena.ne.jp/add?mode=confirm&url=" + url + "&title=" + title, onclick="window.open(this.href, 'hatenawindow', 'width=500, height=450, menubar=no, toolbar=no, scrollbars=yes'); return false;")
+              a.shares__link(href="http://b.hatena.ne.jp/add?mode=confirm&url=" + url + "&title=" + title, onclick="window.open(this.href, 'hatenawindow', 'width=500, height=450, menubar=no, toolbar=no, scrollbars=yes'); return false;")
                 i.icon-hatena
               div.shares__popup Bookmark!
 
             li.shares__item--pocket
-              a.shares__link(data-share="pocket", href="http://getpocket.com/edit?url=" +url + "&title=" + title, onclick="window.open(this.href, 'pocketwindow', 'width=550, height=350, menubar=no, toolbar=no, scrollbars=yes'); return false;")
+              a.shares__link(href="http://getpocket.com/edit?url=" +url + "&title=" + title, onclick="window.open(this.href, 'pocketwindow', 'width=550, height=350, menubar=no, toolbar=no, scrollbars=yes'); return false;")
                 i.fa.fa-get-pocket
               div.shares__popup Save!
 
