--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -126,6 +126,12 @@ a {
 
 
 //== Components
+#app {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
 .container {
   position:relative;
   display:table;
