Add output style option

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -2,6 +2,7 @@
 @import "normalize";
 @import "font-awesome/font-awesome";
 @import "iconmoon";
+@import "select/default";
 
 
 //== Variables
@@ -123,6 +124,15 @@ a {
   background:darken(#2f3129, 8%);
 }
 
+
+// @TODO
+.select {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+  width: 200px;
+}
 
 
 //== Components
